# serializer version: 1
# name: test_procedure_coverage_report_create_html_report
  "Your HTML code coverage report is now available in 'htmlcov/index.html'."
# ---
# name: test_procedure_coverage_report_create_json_report
  "Your JSON code coverage report is now available in 'coverage.json'."
# ---
# name: test_procedure_coverage_report_create_lcov_report
  "Your lcov code coverage report is now available in 'coverage.lcov'."
# ---
